# PALoc

./: README.md
Tutorial/: loc.md
docker/: Dockerfile
fp_gt/: 20220216_canteen_day_ref.txt  20220216_corridor_day_ref.txt  20220216_escalator_day_ref.txt  20220216_garden_day_ref.txt  20220225_building_day_ref.txt
paloc/: CMakeLists.txt
paloc/config/rviz/: building_day.rviz  ouster_indoors.rviz
paloc/config/yaml/: fp_os128_corridor.yaml  fp_os128_corridor_loc.yaml  geode_alpha_vlp16.yaml  geode_beta_os64.yaml  ms_3dm_pandar32.yaml  ms_sbg_pandar32.yaml  nc_os128.yaml
paloc/include/: base_type.cpp  base_type.hpp
paloc/include/factors/: gravity_factor.h  gravity_fator2.h  gravity_kalman_filter.h
paloc/include/fast_lio/: common_lib.h  use-ikfom.hpp
paloc/include/fast_lio/IKFoM_toolkit/esekfom/: esekfom.hpp
paloc/include/fast_lio/IKFoM_toolkit/mtk/types/: vect.hpp
paloc/include/fast_lio/fast_lio/: CustomMsg.h  CustomPoint.h  Pose6D.h
paloc/launch/: fp_corridor.launch  fp_os128_corridor_loc.launch  geode_alpha_vlp16.launch  geode_beta_os64.launch  ms_3dm_pandar32.launch  ms_sbg_pandar32.launch  newer_colleage_os128.launch
paloc/src/fastlio/: CMakeLists.txt  IMU_Processing.hpp  laserMapping.cpp  preprocess.cpp  preprocess.h
paloc/src/paloc/: cloud_process.cpp  cloud_process.h  data_saver.cpp  data_saver.h  paloc.cpp  paloc.h
